# MedialAxisTransform

./: .gitignore  CMakeLists.txt  Make.sh  README
MedialAxisTransform.xcodeproj/: project.pbxproj
MedialAxisTransform.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MedialAxisTransform.xcodeproj/project.xcworkspace/xcuserdata/beau.xcuserdatad/: UserInterfaceState.xcuserstate  UserInterfaceState.xcuserstate.orig
MedialAxisTransform.xcodeproj/xcuserdata/beau.xcuserdatad/xcschemes/: MedialAxisTransform.xcscheme  xcschememanagement.plist
config/: FindOpenCL.cmake
medialAxisTransform/: AUTHORS  CMakeLists.txt  FileHandler.cpp  FileHandler.h  Makefile  Makefile.am  Makefile.in  MedialAxisTransform  MedialAxisTransform.1  RGBAUtilities.cpp  RGBAUtilities.h  aclocal.m4  auto.sh  config.h  config.h.in  config.status  configure  configure.in  global.h  libtool  main.cpp  marchingcubes.cpp  marchingcubes.h  my_kernel.cl  openCLUtilities.cpp  openCLUtilities.h  openGLVisualiser.cpp  openGLVisualiser.h  rc.frag  rc.vert  sobel_opt1.cl  vec3f.cpp  vec3f.h
medialAxisTransform/.deps/: FileHandler.Po  RGBAUtilities.Po  main.Po  openCLUtilities.Po  openGLVisualiser.Po
medialAxisTransform/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
