AC_INIT(MedialAxisTransform, 1.0, beau@inbeta.org)
AM_INIT_AUTOMAKE(MedialAxisTransform, ($VERSION))
AM_CONFIG_HEADER(config.h)
AC_CONFIG_MACRO_DIR([m4])

AC_COPYRIGHT(Beau Johnston 2011)
AC_REVISION($Revision$)

LT_INIT
# Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_GREP
AC_PROG_AWK     

AC_CHECK_HEADERS(GLUT/glut.h)
AC_CHECK_HEADERS(OpenGL/gl.h)
AC_CHECK_HEADERS(GL/glut.h)
AC_CHECK_HEADERS(GL/gl.h)
AC_CHECK_HEADERS(math.h)
AC_CHECK_HEADERS(stdio.h)
AC_CHECK_HEADERS(stdlib.h)
AC_CHECK_HEADERS(sys/time.h)
AC_CHECK_HEADERS(iostream.h)
AC_CHECK_HEADERS(string.h)
AC_CHECK_HEADERS(fstream.h)
AC_CHECK_HEADERS(iostream.h)

AM_INIT_AUTOMAKE([$PACKAGE_TARNAME], [$PACKAGE_VERSION])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT



